Adicionando endpoint para retornar os livros do usuário logado
